<resources>
    <string name="content_jiaocheng_title">HTML简介</string>
    <string name="content_jiaocheng_text1">
        \t\t\t\t HTML5是HTML(超文本标记语言,英文：HyperText Markup Language，HTML)下一个主要的修订版本，现在仍处于发展阶段。目标是取代1999年所制定的HTML 4.01和XHTML 1.0标准，
        以期能在互联网应用迅速发展的时候，使网络标准达到符合当代的网络需求。广义论及HTML5时，实际指的是包括HTML、CSS和JavaScript在内的一套技术组合。它希望能够减少浏览器对于需要插件的丰富性网络应用服务
        （plug-in-based rich internet application，RIA)，如Adobe Flash、Microsoft Silverlight，与Oracle JavaFX的需求，并且提供更多能有效增强网络应用的标准集。具体来说，HTML5添加了许多新
        的语法特征，其中包括:\n
        &lt; video &gt; \n &lt; audio &gt; \n &lt;canvas&gt; \n 三个元素，同时集成了SVG内容。这些元素是为了更容易的在网页中添加和处理多媒体和图片内容而添加的。其它新的元素包括
        &lt;section&gt;, &lt;article &gt;, &lt;header &gt;,
        和&lt; nav &gt; 是为了丰富文档的数据内容。新的属性的添加也是为了同样的目的。同时也有一些属性和元素被卸载掉了。一些元素，像&lt;a&gt;, 和&lt;menu&gt;被修改，重新定义或标准化了。同时APIs和DOM已经成为HTML5中的基础部
        分了。
        \n\t\t\t\t HTML5还定义了处理非法文档的具体细节，使得所有浏览器和客户端程序能够一致地处理语法错误；HTML5会在后面中具体介绍，在此就不说明了。
    </string>
    <string name="content_bianjiqi_title">html编辑器</string>
    <string name="content_bianjiqi_text1">
    　　现在有HTML编辑器有很多 ，这里为大家推荐几款常用的编辑器：\n
　　Notepad++：https://notepad-plus-plus.org/ \n
　　Sublime Text：http://www.sublimetext.com/ \n
　　HBuilder：http://www.dcloud.io/ \n
你可以从以上软件的官网中下载对应的软件，按步骤安装即可。接下来我们将为大家演示如何使用Notepad++工具来创建 HTML 文件，其他两个工具操作步骤类似。\n
　　Notepad++是 Windows操作系统下的一套文本编辑器(软件版权许可证: GPL)，有完整的中文化接口及支持多国语言编写的功能(UTF8技术)。\n\n
步骤 1:　新建 HTML 文件\n
　　在 Notepad++ 安装完成后，选择" 文件(F)-&gt;新建(N) "，在新建的文件中输入以下代码：
    </string>
    <string name="content_bianjiqi_html">
&lt;DOCTYPE html&gt;\n
&lt;html&gt;\n
&lt;head&gt;\n
　　&lt;meta charset="utf-8"&gt; \n
　　&lt;title&gt;百度一下&lt;/title&gt;\n
&lt;head&gt;\n
&lt;body&gt; \n
　　&lt;h1&gt;我的第一个标题&lt;/h1&gt;\n
　　&lt;p&gt;我的第一个段落。&lt;/p&gt; \n
&lt;/body&gt;\n
&lt;/html&gt;
    </string>
    <string name="content_bianjiqi_text2">
步骤 2: 另存为 HTML 文件\n
\t\t\t\t选择" 文件(F)->另存为(A) "，文件名为 runoob.html；当您保存 HTML 文件时，既可以使用 .htm 也可以使用 .html 扩展名。两者没有区别，完全根据您的喜好。在一个容易记忆的文件夹中保存这个文件，比如 runoob。\n\n

步骤 3: 在浏览器中运行这个 HTML 文件\n
　　启动您的浏览器，然后选择"文件"菜单的"打开文件"命令，或者直接在文件夹中双击您的 HTML 文件。\n
运行显示结果类似如下:
    </string>
    <string name="content_yuansu_title">HTML元素</string>
    <string name="content_yuansu_text1">
        HTML 元素语法：\n
　HTML 元素以开始标签起始\n
　HTML 元素以结束标签终止\n
　元素的内容是开始标签与结束标签之间的内容\n
　某些 HTML 元素具有空内容（empty content）\n
　空元素在开始标签中进行关闭（以开始标签的结束而结束）\n
　大多数 HTML 元素可拥有属性\n

嵌套的 HTML 元素：\n
HTML 文档由嵌套的 HTML 元素构成。\n
HTML 文档实例\n\n
    </string>
    <string name="content_yuansu_text2">
        HTML 实例解析\n

&lt;p&gt; 元素:\n
&lt;p&gt;这是第一个段落。&lt;/p&gt;\n
这个 &lt;p&gt; 元素定义了 HTML 文档中的一个段落。这个元素拥有一个开始标签 &lt;p&gt; 以及一个结束标签 &lt;/p&gt;.元素内容是: 这是第一个段落。\n\n
&lt;body&gt; 元素:\n
&lt;body&gt;\n
　　&lt;p&gt;这是第一个段落。&lt;/p&gt;\n
&lt;/body&gt;\n
&lt;body&gt; 元素定义了 HTML 文档的主体。这个元素拥有一个开始标签 &lt;body&gt; 以及一个结束标签 &lt;/body&gt;。元素内容是另一个 HTML 元素（p 元素）。\n\n
&lt;html&gt; 元素：\n
&lt;html&gt;\n
&lt;body&gt;\n
　　&lt;p&gt;这是第一个段落。&lt;/p&gt;\n
&lt;/body&gt;\n
&lt;/html&gt;\n
&lt;html&gt; 元素定义了整个 HTML 文档。这个元素拥有一个开始标签 &lt;html&gt; ，以及一个结束标签 &lt;/html&gt;.元素内容是另一个 HTML 元素（body 元素）。
    </string>
    <string name="content_biaoti_title">HTML标题</string>
    <string name="content_biaoti_text1">
        标题（Heading）是通过 \n
　　&lt;h1&gt; &lt;/h1&gt;\n
　　&lt;h2&gt; &lt;/h2&gt;\n
　　&lt;h3&gt; &lt;/h3&gt;\n
　　&lt;h4&gt; &lt;/h4&gt;\n
　　&lt;h5&gt; &lt;/h5&gt;\n
　　&lt;h6&gt;&lt;/h6&gt; \n
标签进行定义的。其中&lt;h1&gt; 定义最大的标题，&lt;h6&gt; 定义最小的标题。\n
标题的重要性：\n
　　请确保将 HTML 标题 标签只用于标题。不要仅仅是为了生成粗体或大号的文本而使用标题。搜索引擎使用标题为您的网页的结构和内容编制索引。因为用户可以通过标题来快速浏览您的网页，所以用标题来呈现文档结构是很重要的。应该将 h1 用作主标题（最重要的），其后是 h2（次重要的），再其次是 h3，以此类推。\n\n

实例：\n
新建一个HTML页面输入以下代码：
    </string>
    <string name="content_biaoti_html">
        &lt;!DOCTYPE&gt;\n
&lt;html&gt;\n
&lt;head&gt;\n
　　&lt;title&gt;测试标题&lt;/title&gt;\n
&lt;/head&gt;\n
&lt;body&gt;\n
　　&lt;h1&gt;这是一个标题。&lt;/h1&gt; \n
　　&lt;h2&gt;这是一个标题。&lt;/h2&gt;\n
　　&lt;h3&gt;这是一个标题。&lt;/h3&gt;\n
&lt;/body&gt;\n
&lt;/html&gt;\n
    </string>
    <string name="content_biaoti_text2">用浏览器运行结果如下:</string>
    <string name="content_lianjie_title">HTML 链接</string>
    <string name="content_lianjie_text1">
        　　HTML 使用超级链接与网络上的另一个文档相连。几乎可以在所有的网页中找到链接。点击链接可以从一张页面跳转到另一张页面。\n

HTML 超链接（链接）:\n
　　HTML使用标签 &lt;a&gt;来设置超文本链接。超链接可以是一个字，一个词，或者一组词，也可以是一幅图像，您可以点击这些内容来跳转到新的文档或者当前文档中的某个部分。当您把鼠标指针移动到网页中的某个链接上时，箭头会变为一只小手。在标签&lt;a&gt; 中使用了href属性来描述链接的地址。默认情况下，链接将以以下形式出现在浏览器中：\n
　　1.一个未访问过的链接显示为蓝色字体并带有下划线。\n
　　2.访问过的链接显示为紫色并带有下划线。\n
　　3.点击链接时，链接显示为红色并带有下划线。\n
注意：如果为这些超链接设置了 CSS 样式，展示样式会根据 CSS 的设定而显示。\n\n

HTML 链接语法\n
　链接的 HTML 代码很简单。它类似这样：\n
　　&lt;a href="url"&gt;链接文本&lt;/a&gt;\n
　href 属性描述了链接的目标。\n
    </string>
    <string name="content_lianjie_text2">
        HTML 链接 - target 属性\n
　　使用 target 属性，你可以定义被链接的文档在何处显示。\n
下面的这行会在新窗口打开文档：\n
实例：\n
　&lt;a href="http://www.baidu.com/" target="_blank"&gt;访问百度&lt;/a&gt;\n\n

HTML 链接- id 属性\n
　　id属性可用于创建在一个HTML文档书签标记。\n
提示: 书签是不以任何特殊的方式显示，在HTML文档中是不显示的，所以对于读者来说是隐藏的。\n
实例\n
在HTML文档中插入ID:\n
　　&lt;a id="tips"&gt;有用的提示部分&lt;/a&gt;\n
在HTML文档中创建一个链接到"有用的提示部分(id="tips"）"：\n
　　&lt;a href="#tips"&gt;访问有用的提示部分&lt;/a&gt;\n
或者，从另一个页面创建一个链接到"有用的提示部分(id="tips"）"：\n
　　&lt;a href="http://www.runoob.com/html/html-links.html#tips"&gt;\n
访问有用的提示部分&lt;/a&gt;
    </string>
    <string name="content_toubu_title">HTML头部&lt;head&gt;</string>
    <string name="content_toubu_text1">
HTML &lt;head&gt; 元素：\n
&lt;head&gt; 元素包含了所有的头部标签元素。在 &lt;head&gt;元素中你可以插入脚本（scripts）, 样式文件（CSS），及各种meta信息。可以添加在头部区域的元素标签如下：\n
　　&lt;title&gt;\n
　　&lt;style&gt;\n
　　&lt;meta&gt;\n
　　&lt;link&gt;\n
　　&lt;script&gt;\n
　　&lt;noscript&gt;\n
　　&lt;base&gt;\n\n

HTML &lt;title&gt; 元素：\n
　　&lt;title&gt; 标签定义了不同文档的标题。\n
　　&lt;title&gt; 在 HTML/XHTML 文档中是必须的。\n
&lt;title&gt; 元素:\n
（1）定义了浏览器工具栏的标题。\n
（2）当网页添加到收藏夹时，显示在收藏夹中的标题。\n
（3）显示在搜索引擎结果页面的标题。\n\n

HTML &lt;base&gt; 元素：\n
　　&lt;base&gt; 标签描述了基本的链接地址/链接目标，该标签作为HTML文档中所有的链接标签的默认链接。\n\n

HTML &lt;link&gt; 元素：\n
　　&lt;link&gt; 标签定义了文档与外部资源之间的关系。&lt;link&gt; 标签通常用于链接到样式表。\n\n

HTML &lt;style&gt; 元素：\n
　　&lt;style&gt; 标签定义了HTML文档的样式文件引用地址。在&lt;style&gt; 元素中你也可以直接添加样式来渲染 HTML 文档。\n\n

HTML &lt;meta&gt; 元素：\n
　　meta标签描述了一些基本的元数据。&lt;meta&gt; 标签提供了元数据.元数据也不显示在页面上，但会被浏览器解析。META 元素通常用于指定网页的描述，关键词，文件的最后修改时间，作者，和其他元数据。元数据可以使用于浏览器（如何显示内容或重新加载页面），搜索引擎（关键词），或其他Web服务。&lt;meta&gt; 一般放置于 &lt;head&gt; 区域。\n\n

HTML &lt;script&gt; 元素：\n
　　&lt;script&gt;标签用于加载JS脚本文件。\n\n

以下是综合实例：
    </string>
    <string name="content_toubu_html">
 &lt;!DOCTYPE html&gt;\n
&lt;html&gt;\n
&lt;head&gt; \n
　　&lt;meta charset="utf-8"&gt; \n
　　&lt;!-- 为搜索引擎定义关键词: --&gt;\n
　　&lt;meta name="keywords" content="HTML, CSS, XML, XHTML, JavaScript"&gt;\n
　　&lt;!-- 为网页定义描述内容: --&gt;\n
　　&lt;meta name="description" content="免费 Web  编程 教程"&gt;\n
　　&lt;!-- 定义网页作者: --&gt;\n
　　&lt;meta name="author" content="Novice"&gt;\n
　　&lt;!-- 每30秒中刷新当前页面: --&gt;\n
　　&lt;meta http-equiv="refresh" content="30"&gt;\n

　　&lt;base href="http://www.runoob.com/images/" target="_blank"&gt;\n
　　link rel="stylesheet" type="text/css" href="mystyle.css"&gt;\n
　　&lt;title&gt;我是标题&lt;/title&gt;\n\n

　　&lt;!-- CSS样式 --&gt;\n
　　&lt;style type="text/css"&gt;\n
　　　　.mybody {background-color:yellow}\n
　　　　.test {color:blue}\n
　　&lt;/style&gt;\n\n

　　&lt;!-- 自定义js --&gt;\n
　　&lt;script type="text/javascript"&gt;\n
　　function(){\n
　　　　var i=10;\n
　　　　if (i&lt;5)\n
  　　　{\n
  　　　　　// some code\n
  　　　}\n
　　}\n
　&lt;/script&gt;\n
&lt;/head&gt;\n
&lt;body&gt;\n
　　　　这里写主体内容\n
&lt;/body&gt;\n
&lt;/html&gt;\n
    </string>
    <string name="content_toubu_text2">这只是个定义或者引入内容而已，故没有运行结果图。</string>
    <string name="content_biaoge_title">HTML表格</string>
    <string name="content_biaoge_text1">
        　　表格由 &lt;table&gt; 标签来定义。每个表格均有若干行（由 &lt;tr&gt; 标签定义），每行被分割为若干单元格（由 &lt;td&gt; 标签定义）。字母 td 指表格数据（table data），即数据单元格的内容。数据单元格可以包含文本、图片、列表、段落、表单、水平线、表格等等。\n\n

表格边框属性：\n
表格边框属性用 border表示，例如：\n
　&lt;table border="1"&gt;\n
　&lt;/table&gt;\n
这就表示这个表格显示边框，并且边框显示度为1。如果不定义边框属性，表格将不显示边框。有时这很有用，但是大多数时候，我们希望使用边框属性来显示一个带有边框的表格。\n\n

表格表头：\n
表格的表头使用 &lt;th&gt; 标签进行定义。大多数浏览器会把表头显示为粗体居中的文本。\n\n

实例：
    </string>
    <string name="content_biaoge_html">
        &lt;!DOCTYPE html&gt;\n
&lt;html&gt;\n
&lt;body&gt;\n
　　&lt;table border="1"&gt; \n
　　　　&lt;tr&gt; \n
　　　　　　&lt;th&gt;Header 1&lt;/th&gt; \n
　　　　　　&lt;th&gt;Header 2&lt;/th&gt; \n
　　　　&lt;/tr&gt; \n
　　　　&lt;tr&gt; \n
　　　　　　&lt;td&gt;row 1, cell 1&lt;/td&gt;\n
　　　　　　&lt;td&gt;row 1, cell 2&lt;/td&gt; \n
　　　　&lt;/tr&gt; \n
　　　　&lt;tr&gt;\n
　　　　　　&lt;td&gt;row 2, cell 1&lt;/td&gt; \n
　　　　　　&lt;td&gt;row 2, cell 2&lt;/td&gt;\n
　　　　&lt;/tr&gt;\n
　　&lt;/table&gt;\n
&lt;/body&gt;\n
&lt;/html&gt;\n
    </string>
    <string name="content_biaoge_text2">运行结果如下图所示：</string>
    <string name="content_biaoge_text3">
        表格其他属性：\n
&lt;caption&gt; 定义表格标题\n
&lt;colgroup&gt; 定义表格列的组\n
&lt;col&gt;  定义用于表格列的属性\n
&lt;thead&gt; 定义表格的页眉\n
&lt;tbody&gt;  定义表格的主体\n
&lt;tfoot&gt;  定义表格的页脚\n
    </string>
    <string name="content_tupian_title">HTML图片</string>
    <string name="content_tupian_text1">
 图像标签&lt;img&gt;和源属性（src）：\n
　　在 HTML 中，图像由&lt;img&gt; 标签定义。&lt;img&gt; 是空标签，意思是说，它只包含属性，并且没有闭合标签。要在页面上显示图像，你需要使用源属性（src）。src 指 "source"。源属性的值是图像的 URL 地址。\n\n
定义图像的语法是：\n
&lt;img src="url" alt="some_text"&gt;\n
URL 指存储图像的位置。如果名为 "pulpit.jpg" 的图像位于 www.runoob.com 的 images 目录中，那么其 URL 为http://www.runoob.com/images/pulpit.jpg。浏览器将图像显示在文档中图像标签出现的地方。如果你将图像标签置于两个段落之间，那么浏览器会首先显示第一个段落，然后显示图片，最后显示第二段。\n\n

HTML 图像- Alt属性：\n
alt 属性用来为图像定义一串预备的可替换的文本，替换文本属性的值是用户定义的。\n
例如：\n
&lt;img src="boat.gif" alt="Big Boat"&gt;\n
在浏览器无法载入图像时，替换文本属性告诉读者她们失去的信息。此时，浏览器将显示这个替代性的文本而不是图像。为页面上的图像都加上替换文本属性是个好习惯，这样有助于更好的显示信息，并且对于那些使用纯文本浏览器的人来说是非常有用的。\n\n

HTML 图像- 设置图像的高度与宽度：\n
height（高度） 与 width（宽度）属性用于设置图像的高度与宽度。\n
属性值默认单位为像素:\n
&lt;img src="pulpit.jpg" alt="Pulpit rock" width="304" height="228"&gt;\n
提示: 指定图像的高度和宽度的一个很好的习惯。如果图像指定了高度宽度，页面加载时就会保留指定的尺寸。如果没有指定图片的大小，加载页面时有可能会破坏HTML页面的整体布局\n\n

基本的注意事项 - 有用的提示：\n
注意1: 假如某个 HTML 文件包含十个图像，那么为了正确显示这个页面，需要加载 11 个文件。加载图片是需要时间的，所以我们的建议是：慎用图片。\n
注意2: 加载页面时，要注意插入页面图像的路径，如果不能正确设置图像的位置，浏览器无法加载图片，图像标签就会显示一个破碎的图片。\n\n

实例：
    </string>
    <string name="content_tupian_html">
        &lt;!DOCTYPE html&gt;\n
&lt;html&gt;\n
&lt;head&gt; \n
　　&lt;meta charset="utf-8"&gt; \n
　　&lt;title&gt;测试引用本地图片&lt;/title&gt; \n
&lt;/head&gt;\n
&lt;body&gt;\n
　　&lt;h2&gt;Norwegian Mountain Trip&lt;/h2&gt;\n
　　&lt;img border="0" src="/myimg.png" alt="加载图片失败!" width="304" height="228"&gt;\n
&lt;/body&gt;\n
&lt;/html&gt;\n
    </string>
    <string name="content_tupian_text2">运行结果如下图所示：</string>
    <string name="content_qukuai_title">HTML区块</string>
    <string name="content_bottom">~~~~~~~到底啦~~~~~~~</string>
    <string name="content_mainlayout_pwords">发表留言</string>
    <string name="content_mainlayout_wordssubmit">发表</string>
    <string name="content_mainlayout_allword">全部留言</string>
    <string name="wrodsactivity_btn_ilookme">与我相关</string>
    <string name="wrodsactivity_btn_lookendto">倒序查看</string>
    <string name="wrods_layout_nowords">还没有人说话呢，快去</string>
    <string name="wrods_layout_liuyan">留言</string>
    <string name="wrods_layout_pagepre">上一页</string>
    <string name="wrods_layout_text1">第</string>
    <string name="wrods_layout_text2">页</string>
    <string name="wrods_layout_go">GO</string>
    <string name="wrods_layout_pagenext">下一页</string>
    <string name="wrods_layout_allpage">总共0页</string>
</resources>